# mlfs-book

./: pyproject.toml
airquality/: requirements.txt
airquality/airquality/: air_quality_data_retrieval.py  context_engineering.py  llm_chain.py
airquality/notebooks/: 1_air_quality_feature_backfill.ipynb  2_air_quality_feature_pipeline.ipynb  3_air_quality_training_pipeline.ipynb  4_air_quality_batch_inference.ipynb  5_function_calling.ipynb
ccfraud/: requirements.txt  tasks.py
ccfraud/cc_fraud_model/: ccfraud-predictor.py
ccfraud/ccfraud/: 2-feldera-streaming-feature-pipeline.py  3-batch-feature-pipeline.py  synth_transactions.py
ccfraud/notebooks/: 4-training-cc-fraud-pipeline.ipynb  ccfraud-predictor.py
ccfraud/scripts/: 1a-run-feldera.sh
docs/_includes/: titanic.html
titanic/: interactive-ui-gradio.py  requirements.txt
titanic/notebooks/: 1-titanic-feature-group-backfill.ipynb  2-titanic-training-pipeline.ipynb  3-scheduled-titanic-feature-pipeline-daily.ipynb  4-scheduled-titanic-batch-inference-daily.ipynb
