[project]
name = "mlfs-book"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "hopsworks[python,great-expectations]",
    "papermill",
    "ipykernel",
    "ipython",
    "jupyter",
    "nbconvert",
    "nbformat",
    "pydantic-settings>=2.6.1",
    "geopy==2.4.1",
    "geoip2==5.2.0",
    "openmeteo-requests",
    "requests-cache>=1.3.2",
    "retry-requests==2.0.0",
    "xgboost>=2.1.0",
    "scikit-learn==1.6.1",
    "matplotlib",
    "seaborn",
    "streamlit>=1.30.0",
    "polars==1.36.1",
    "bottleneck>=1.3.6",
    "email-validator==2.2.0",
    "Faker==38.2.0",
    "pytest>=8.0.0",
    "invoke",
    "feldera",
    "gradio>=6.20.0",
    "uv>=0.11.28",
]
